--- a/scss/testimonial-slider.scss
+++ b/scss/testimonial-slider.scss
@@ -258,7 +258,7 @@
 
             @media ($sm-1679){
                 font-size: 16px;
-                max-height: 72px;
+                 
             }
             @media ($sm-1481){
                 font-size: 14px;
